# aumos-proto

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  buf.gen.yaml  buf.yaml  pyproject.toml
.github/workflows/: proto-check.yml
docs/rfcs/: RFC-001-event-versioning.md
proto/aumos/api/v1/: common.proto  health.proto
proto/aumos/events/v1/: agent_envelope.proto  audit_event.proto  feature_flag_event.proto  governance_decision.proto  lock_event.proto  metering_event.proto  model_lifecycle.proto  resilience_event.proto  security_alert.proto  usage_metrics.proto
proto/aumos/models/v1/: agent.proto  job.proto  model.proto  tenant.proto
src/aumos_proto/: __init__.py
src/aumos_proto/api/: __init__.py
src/aumos_proto/api/v1/: __init__.py  common_pb2.py  health_pb2.py
src/aumos_proto/events/: __init__.py
src/aumos_proto/events/v1/: __init__.py  agent_envelope_pb2.py  audit_event_pb2.py  feature_flag_event_pb2.py  governance_decision_pb2.py  lock_event_pb2.py  metering_event_pb2.py  model_lifecycle_pb2.py  resilience_event_pb2.py  security_alert_pb2.py  usage_metrics_pb2.py
src/aumos_proto/models/: __init__.py
src/aumos_proto/models/v1/: __init__.py  agent_pb2.py  job_pb2.py  model_pb2.py  tenant_pb2.py
src/aumos_proto/registry/: __init__.py  client.py  framing.py
tests/: __init__.py  test_new_event_types.py  test_proto_imports.py  test_schema_registry.py
